@@ -105,6 +105,7 @@ S3method(makeRLearner,regr.randomForest)
 S3method(makeRLearner,regr.rpart)
 S3method(makeRLearner,regr.rsm)
 S3method(makeRLearner,regr.rvm)
+S3method(makeRLearner,regr.svm)
 S3method(makeRLearner,surv.CoxBoost)
 S3method(makeRLearner,surv.coxph)
 S3method(makeRLearner,surv.glmboost)
@@ -193,6 +194,7 @@ S3method(predictLearner,regr.randomForest)
 S3method(predictLearner,regr.rpart)
 S3method(predictLearner,regr.rsm)
 S3method(predictLearner,regr.rvm)
+S3method(predictLearner,regr.svm)
 S3method(predictLearner,surv.CoxBoost)
 S3method(predictLearner,surv.coxph)
 S3method(predictLearner,surv.glmboost)
@@ -307,6 +309,7 @@ S3method(trainLearner,regr.randomForest)
 S3method(trainLearner,regr.rpart)
 S3method(trainLearner,regr.rsm)
 S3method(trainLearner,regr.rvm)
+S3method(trainLearner,regr.svm)
 S3method(trainLearner,surv.CoxBoost)
 S3method(trainLearner,surv.coxph)
 S3method(trainLearner,surv.glmboost)
