@@ -4,6 +4,9 @@ mlr_2.1:
 - removed fix.factors option from randomForest, but added it in general to makeLearner,
   so it now works for all learners. 
   Helps when feature factor levels where dropped in newdata prediction data.frames
+- more consistent results for tuning algorithms and parameters with "trafos" : 
+  we always return the optimal settings on the transformed scale, but in the opt.path in
+  the original scale.
 
 - new learners:
 -- classif.plsdaCaret
